Added CSS content

--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -16,8 +16,61 @@ html {
 body{
     background-color: cadetblue;
     font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+    margin:0;
 }
 
 header.primary{
-    background: red;
+    background: #7AE5BF;
+    color: #ffffff;
+    /*long form*/
+  padding-top: 40px;
+  padding-right: 40px;
+  padding-bottom: 40px;
+  padding-left: 40px;  
+  /*Single value short hand -Use if all values are the same*/
+padding: 40px;
+/* T,R,B,L */
+padding: 20px 40px 20px 40px;  
+/* Two Value Top/Bottom / L/R */
+padding: 20px 40px;
+text-align:center ;  
+}
+
+header.primary h1{
+  font-size: 2.4rem;
+  margin: 20px 0 0 0;
+}
+
+header.primary h1 a {
+  color:#ffffff;
+  text-decoration: none;
+}
+
+header.primary h2{
+  font-size:1.4rem;
+  margin:0;
+}
+
+nav.primary{}
+nav.primary ul{
+  padding:10px 0 0 0;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+}
+nav.primary ul li{
+  list-style-type:none;
+}
+nav.primary ul li a{
+  color:#ffffff;
+  text-decoration: none;
+  border: 3px solid #c0c0c0;
+  padding: 7.5px 10px;
+  border-radius:20px;
+  background-color: rgba(0,0,0,.4);
+  transition: .4s;
+}
+
+nav.primary ul li a:hover{
+  background-color: rgba(0,0,0,.8);
 }
