--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -11,6 +11,20 @@ html {
     box-sizing: inherit;
   }
 
+/*---------------Responsive Images----------------*/
+
+img{
+  max-width: 100%;
+}
+
+/*---------------Utility Classes----------------*/
+
+.container{
+  width: 80vw;
+  max-width:960px;
+  margin:40px auto;
+}
+
 /*----------------Global Styles-----------------*/
 
 body{
@@ -51,7 +65,9 @@ header.primary h2{
   margin:0;
 }
 
-nav.primary{}
+nav.primary{
+  max-width:960px;
+  margin:auto;}
 nav.primary ul{
   padding:10px 0 0 0;
   display: flex;
@@ -74,3 +90,51 @@ nav.primary ul li a{
 nav.primary ul li a:hover{
   background-color: rgba(0,0,0,.8);
 }
+
+#intro{
+  line-height: 1.6;
+}
+
+#intro h2{
+  color: #ffffff;
+  border-bottom: 1px dotted dotted grey;
+}
+
+#content{
+  display:flex;
+  flex-direction:row;
+  justify-content:space-around;
+  gap:2rem;
+}
+
+#content article.post{
+  box-shadow: 0 4px 8px rgba(0,0,0, .6);
+  padding: 10px;
+  border-radius: 4px;
+  font-size: .8rem;
+}
+
+time.post-date, figcaption{
+  text-transform:uppercase;
+  color:#ccc;
+}
+
+#content article.post figure{
+  margin:0;
+}
+
+/* --------- Media Queries ----------- */
+
+@media screen and (max-width:600px){
+  
+  nav.primary ul{
+    flex-direction:column;
+    gap: 10px;
+    max-width: 250px;
+    margin:20px auto;
+  } 
+    nav.primary ul a{
+      display:block;
+    }
+    
+  }
