--- a/css-demo/assets/css/style.css
+++ b/css-demo/assets/css/style.css
@@ -25,6 +25,30 @@ img{
   margin:40px auto;
 }
 
+/*-----------------UALR Image-------------------*/
+
+.img-right {
+float: right;
+margin: 10px 0 10px 20px;
+border: 1px solid #3b638b;
+padding: 5px;
+border-radius: 50px;
+}
+
+.img-left {
+  float: left;
+  margin: 10px 20px 10px 0px;
+/*-------Top, Right, Bottom, Left------*/
+  border: 1px solid #3b638b;
+  padding: 5px;
+  border-radius: 50px;
+  }
+
+  .img-center{
+    display:block;
+    margin:20px auto;
+  }
+
 /*----------------Global Styles-----------------*/
 
 body{
@@ -124,7 +148,62 @@ time.post-date, figcaption{
 
 #content article.post figure{
   margin:0;
-}
+
+  #practice h2{
+    color: #3b638b;
+    border-bottom: 1px dotted #c0c0c0; 
+   }
+
+   #practice a{
+    color:#7AE5BF;
+    transition: .4s;
+   }
+
+   #pratice a:hover{
+    text-decoration:none;
+   }
+
+   #practice h3{
+    border-left: 7.5px solid #7AE5BF
+   }
+
+   table{
+    width: 100%;
+    border: 1px solid #ffffff;
+    margin: 20px 0;
+    border-collapse: collapse;
+   }
+   caption{
+    font-weight:bold;
+    margin: 10px;
+   }
+   tr:nth-child(even){
+    background-color: rgba(0, 0, 0, 0.1);
+   }
+   
+   tr:hover{
+    background-color: rgba(0,0,0,0.4);
+   }
+
+   th{
+    background-color: #7AE5BF;
+    color:#ffffff;
+    padding:7.5px;
+   }
+   td{
+    border:1px solid #7AE5BF;
+    padding: 5px;
+   }
+
+   td:nth-child(2), td:nth-child(3){
+
+   }
+
+   td:nth-child(n+2){
+    text-align:right;
+   }
+
+
 
 /*---------------Side Bar----------------*/
 
