--- a/spacex-project/assets-spacex/spacex-css/faqpage.css
+++ b/spacex-project/assets-spacex/spacex-css/faqpage.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #d3d3d3; 
+    background-color: #d3d3d3;
     color: #fff;
     background-size: 10px 10px;
     background-image: repeating-linear-gradient(45deg, #fff 0, #fff 1px, #d3d3d3 0, #d3d3d3 50%);
@@ -66,60 +66,21 @@ nav.primary ul li a:hover {
     border-radius: 5px;
 }
 
-main {
-    width: 80%;
-    margin: 40px auto;
-    text-align: center;
-}
-
-#header-box {
-    width: 80%;
-    max-width: 1200px;
-    background-color: rgba(0, 0, 0, 0.9); 
-    color: white;
-    padding: 30px;
-    margin: 20px auto;
-    border: 5px solid #444;
-    border-radius: 10px;
-}
-
 #content-box {
     width: 80%;
     max-width: 1200px;
-    background-color: rgba(0, 0, 0, 0.8); 
+    background-color: rgba(0, 0, 0, 0.9); /* Dark background */
     color: white;
     padding: 30px;
     margin: 20px auto;
-    border: 5px solid #444;
+    border: 5px solid #444; 
     border-radius: 10px;
 }
 
-#overview, #configurations {
-    margin-bottom: 40px;
-}
-
-#overview h2, #configurations h2, #configurations h3 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
-    text-decoration: underline;
-}
-
-#configurations h3 {
-    font-size: 2em;
-    margin-top: 30px;
-}
-
-ul {
-    text-align: left;
-    margin-top: 10px;
-}
-
-ul li {
-    margin-bottom: 10px;
-}
-
-ul li strong {
-    color: #444cf7;
+main {
+    width: 100%;
+    margin: 40px auto;
+    text-align: center;
 }
 
 footer {
